--- a/data_assumptions.yaml
+++ b/data_assumptions.yaml
@@ -109,5 +109,19 @@ Policies:
     Strike: 200 # Emmision Trading System permit price (€/ton CO2)
     Benchmark: 1.850
 
+
+# Conversion factors
+GJ-to-MWh: 0.277777778 #GJ to MWH
+GJ-to-kWh: 277.7777778 #GJ to kWH
+
+# Energy-carier properties
+Hydrogen:
+  EnergyDensity: 33.33333 # kWh/kg or MWh/ton
+Gas: 
+  EnergyDensity: 15.27777 # kWh/kg or MWh/ton
+Coal: 
+  EnergyDensity: 6.666666 # kWh/kg or MWh/ton
+
+
 # Abbriviations
 # HRC = Hot rolled Coil
