--- a/data_assumptions_ets.yaml
+++ b/data_assumptions_ets.yaml
@@ -1,7 +1,7 @@
 # General input parameters
 nyears: 45
 inflation: 0.02
-discount_rate: 0.1
+discount_rate: 0.07
 
 # Historical emissions and prices for calibration - starting year of our analysis is 2017
 E_2017: 1803.006839 # emissions in 2017, according to difference between communications to the commission
@@ -12,6 +12,8 @@ P_2019: 24.72 # €/ton or M€/MtCO2 in 2019, after adoption MSR according to E
 # MACC
 MACC: 
  E_ref: 1900 # baseline emissions  
+
+MAC: 0.18
 
 # Parameters ETS - all in MtCO2 or MtCO2/year
 LRF_2017: 38.264246
@@ -45,3 +47,12 @@ tolerance_calibration: 0.1 # €/tCO2
 
 # Parameters electrolysers
 efficiency_PEM: 0.50
+p_elek: 30 # €/MWh
+CAPEX: 1000000 # €/MW
+
+# Stochastic modelling parameters
+
+nsamples: 10000
+use_cvar: false
+cvar: 0.05
+std: 0.1
