--- a/data_assumptions_ets.yaml
+++ b/data_assumptions_ets.yaml
@@ -2,6 +2,7 @@
 nyears: 45
 inflation: 0.02
 discount_rate: 0.07
+WACC: 0.07
 
 # Historical emissions and prices for calibration - starting year of our analysis is 2017
 E_2017: 1803.006839 # emissions in 2017, according to difference between communications to the commission
@@ -51,8 +52,28 @@ p_elek: 30 # €/MWh
 CAPEX: 1000000 # €/MW
 
 # Stochastic modelling parameters
-
 nsamples: 10000
 use_cvar: false
 cvar: 0.05
 std: 0.1
+
+# Parameters electricity generation
+gentechs:
+  renewable:
+    p: 0
+    max_h: 1800
+  CCGT:
+    p: 60
+    max_h: 2000
+  OCGT:
+    p: 120
+    max_h: 1157
+  Nuclear:
+    p: 20
+    max_h: 2800
+  Coal:
+    p: 80
+    max_h: 1000
+  VOLL:
+    p: 3000
+    max_h: 3
