- Wrapped iterative method in function - Brought in line with 6 month presentation formulation - Implemented elestic electricity price Known bugs: - Does not converge...

--- a/data_assumptions.yaml
+++ b/data_assumptions.yaml
@@ -1,5 +1,6 @@
 # General parameters
 discountRate: 0.07 # Hurdle factor (%)
+f_steel: 0.07 # Fraction of emmisions coming from steel sector (%)
 
 # Steel decarbonisation routes
 SteelRoutes:
