--- a/data/scenarios.yaml
+++ b/data/scenarios.yaml
@@ -6,148 +6,12 @@
   WACC: 0.07
   E_2019: 1562.33 # emissions in 2019, according to difference between communications to the commission
   E_ref: 1900 # baseline emissions  
-  MAC: 0.18
-  p_elek: 30 # €/MWh
-  # Electrolysis technologies
-  hydrogen_production:
-    alkaline:
-      CAPEX: 750e3 # EUR/MWh
-      efficiency: 0.63
-      dispatchable: 0
-
-    PEM:
-      CAPEX: 1000e3 # EUR/Mwh
-      efficiency: 0.56
-      dispatchable: 1
-
-  # Emission abatement pathways
-  abatement_pathways:
-    SMR:
-      CAPEX: 0 # EUR/?
-      benchmark: 0
-      f: 0.05 # Fraction of emmsions in this sector (%)
-      EF: 0.2121 # ton CO2 abated / MWh H2
-      electricity: 0
-2: # BASELINE scenario 60EUR/MWh elec
-  # General input parameters
-  nyears: 45
-  inflation: 0.00
-  discount_rate: 0.07
-  WACC: 0.07
-  E_2019: 1562.33 # emissions in 2019, according to difference between communications to the commission
-  E_ref: 1900 # baseline emissions  
-  MAC: 0.18
-  p_elek: 60 # €/MWh
-  # Electrolysis technologies
-  hydrogen_production:
-    alkaline:
-      CAPEX: 750e3 # EUR/MWh
-      efficiency: 0.63
-      dispatchable: 0
-
-    PEM:
-      CAPEX: 1000e3 # EUR/Mwh
-      efficiency: 0.56
-      dispatchable: 1
-
-  # Emission abatement pathways
-  abatement_pathways:
-    SMR:
-      CAPEX: 0 # EUR/?
-      benchmark: 0
-      f: 0.05 # Fraction of emmsions in this sector (%)
-      EF: 0.2121 # ton CO2 abated / MWh H2
-      electricity: 0
-
-3: # capacity subsidy scenario 60EUR/MWh elec
-  # General input parameters
-  nyears: 45
-  inflation: 0.00
-  discount_rate: 0.07
-  WACC: 0.07
-  E_2019: 1562.33 # emissions in 2019, according to difference between communications to the commission
-  E_ref: 1900 # baseline emissions  
-  MAC: 0.18
-  p_elek: 60 # €/MWh
-  # Electrolysis technologies
-  hydrogen_production:
-    alkaline:
-      CAPEX: 600e3 # EUR/MWh
-      efficiency: 0.63
-      dispatchable: 0
-
-    PEM:
-      CAPEX: 800e3 # EUR/Mwh
-      efficiency: 0.56
-      dispatchable: 1
-
-  # Emission abatement pathways
-  abatement_pathways:
-    SMR:
-      CAPEX: 0 # EUR/?
-      benchmark: 0
-      f: 0.05 # Fraction of emmsions in this sector (%)
-      EF: 0.2121 # ton CO2 abated / MWh H2
-      electricity: 0
-
-4: # quantity subsidy 5€/MWh elek 60EUR/MWh elec
-  # General input parameters
-  nyears: 45
-  inflation: 0.00
-  discount_rate: 0.07
-  WACC: 0.07
-  E_2019: 1562.33 # emissions in 2019, according to difference between communications to the commission
-  E_ref: 1900 # baseline emissions  
-  MAC: 0.18
-  p_elek: 55 # €/MWh
-  # Electrolysis technologies
-  hydrogen_production:
-    alkaline:
-      CAPEX: 750e3 # EUR/MWh
-      efficiency: 0.63
-      dispatchable: 0
-
-    PEM:
-      CAPEX: 1000e3 # EUR/Mwh
-      efficiency: 0.56
-      dispatchable: 1
-
-  # Emission abatement pathways
-  abatement_pathways:
-    SMR:
-      CAPEX: 0 # EUR/?
-      benchmark: 0
-      f: 0.05 # Fraction of emmsions in this sector (%)
-      EF: 0.2121 # ton CO2 abated / MWh H2
-      electricity: 0
-
-4: # CCfD elek 60EUR/MWh elec
-  # General input parameters
-  nyears: 45
-  inflation: 0.00
-  discount_rate: 0.07
-  WACC: 0.02
-  E_2019: 1562.33 # emissions in 2019, according to difference between communications to the commission
-  E_ref: 1900 # baseline emissions  
-  MAC: 0.18
-  p_elek: 60 # €/MWh
-  # Electrolysis technologies
-  hydrogen_production:
-    alkaline:
-      CAPEX: 750e3 # EUR/MWh
-      efficiency: 0.63
-      dispatchable: 0
-
-    PEM:
-      CAPEX: 1000e3 # EUR/Mwh
-      efficiency: 0.56
-      dispatchable: 1
-
-  # Emission abatement pathways
-  abatement_pathways:
-    SMR:
-      CAPEX: 0 # EUR/?
-      benchmark: 0
-      f: 0.05 # Fraction of emmsions in this sector (%)
-      EF: 0.2121 # ton CO2 abated / MWh H2
-      electricity: 0
+  MAC: 0.1
+  # Commodity price assumptions
+  commodityPrices:
+    Gas: 30 # Gas price (€/Mwh)
+    Coal: 40 # (€/Mwh)
+    Electricity: 40 # (€/Mwh)
+    Hydrogen: 100 # (€/Mwh)
+    Iron: 100 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
+    Scrap: 120 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
