--- a/data/scenarios.yaml
+++ b/data/scenarios.yaml
@@ -1,16 +1,48 @@
 1: # BASELINE scenario 30EUR/MWh elec
   # General input parameters
-  nyears: 45
   inflation: 0.00
-  discount_rate: 0.07
+  discount_rate: 0.10
+  WACC: 0.07
+  E_2019: 1562.33 # emissions in 2019, according to difference between communications to the commission
+  E_ref: 1900 # baseline emissions 
+  MAC: 0.0001
+  commodityPrices:
+    Gas: 20 # Gas price (€/Mwh)
+    Coal: 20 # (€/Mwh)
+    Electricity: 40 # (€/Mwh)
+    Hydrogen: 166 # (€/Mwh)
+    Iron: 100 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
+    Scrap: 250 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
+
+2: # BASELINE scenario 30EUR/MWh elec
+  # General input parameters
+  inflation: 0.00
+  discount_rate: 0.10
+  WACC: 0.07
+  E_2019: 1562.33 # emissions in 2019, according to difference between communications to the commission
+  E_ref: 1900 # baseline emissions 
+  MAC: 0.0002
+  # Commodity price assumptions
+  commodityPrices:
+    Gas: 20 # Gas price (€/Mwh)
+    Coal: 20 # (€/Mwh)
+    Electricity: 20 # (€/Mwh)
+    Hydrogen: 100 # (€/Mwh)
+    Iron: 100 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
+    Scrap: 250 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
+3: # BASELINE scenario 30EUR/MWh elec
+  # General input parameters
+  inflation: 0.00
+  discount_rate: 0.10
   WACC: 0.07
   E_2019: 1562.33 # emissions in 2019, according to difference between communications to the commission
   E_ref: 1900 # baseline emissions  
+  MAC: 0.0003
   # Commodity price assumptions
   commodityPrices:
-    Gas: 30 # Gas price (€/Mwh)
-    Coal: 40 # (€/Mwh)
-    Electricity: 40 # (€/Mwh)
+    Gas: 20 # Gas price (€/Mwh)
+    Coal: 20 # (€/Mwh)
+    Electricity: 20 # (€/Mwh)
     Hydrogen: 100 # (€/Mwh)
     Iron: 100 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
-    Scrap: 120 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
+    Scrap: 250 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
