--- a/data/assumptions_agents.yaml
+++ b/data/assumptions_agents.yaml
@@ -9,10 +9,11 @@ std: 0.1
 gamma: 2.0
 # Parameters ADMM algorithm
 rho_ETS: 1 # rho ADMM penalty term. Set to 10^6, as ETS prices are in order of 10^6 €/MtCO2
-rho_product: 1
-max_iter: 30000 # maximum number of iterations
+rho_product: 10
+max_iter: 300  # maximum number of iterations
 epsilon: 0.1 # stopping criterion
 CircularBufferSize: 2
+horizon: 10
 
 sectors:
     steelmaking:
@@ -60,7 +61,7 @@ sectors:
         Coal: 0.042 # (MWh/ton crude steel)
         Electricity: 0.816 # (MWh/ton crude steel)
         Hydrogen: 1.828 # MWh/ ton crude steel
-        ETS: 0.0  # (ton CO2/ ton HRC )
+        ETS: 0.000  # (ton CO2/ ton HRC )
 
       #HDRI-EAF-2:
       # Alternative source Vogl et al.
