--- a/data/assumptions_agents.yaml
+++ b/data/assumptions_agents.yaml
@@ -13,8 +13,8 @@ gamma: 2.0
 # Parameters ADMM algorithm
 rho_ETS: 1 # rho ADMM penalty term. Set to 10^6, as ETS prices are in order of 10^6 €/MtCO2
 rho_product: 10
-max_iter: 30000  # maximum number of iterations
-epsilon: 0.1 # stopping criterion
+max_iter: 10000  # maximum number of iterations
+epsilon: 0.05 # stopping criterion
 CircularBufferSize: 2
 pay_back_time: 12
 sectors:
@@ -22,9 +22,11 @@ sectors:
       BF-BOF:
       # Source from https://doi.org/10.1016/j.jclepro.2017.03.162
       # TO DO: find a more specific one
-        CAPEX: 1000
-        legacy_capacity: 10000
-        lifetime: 30
+        CAPEX: 600
+        legacy_capacity: 107
+        legcap_out: 40 # years
+        lifetime: 40
+        leadtime: 0
         OPEX:
           Iron: 1.504 # ton
           Coal: 0.799 # (MWh /ton HRC)
@@ -33,9 +35,11 @@ sectors:
 
       BF-BlendH2-BOF:
       # Source from https://doi.org/10.1016/j.jclepro.2017.03.162
-        CAPEX: 1000
-        legacy_capacity: 10000
-        lifetime: 30
+        CAPEX: 100
+        legacy_capacity: 0
+        lifetime: 40
+        legcap_out: 40 # years
+        leadtime: 0
         OPEX:
           Iron: 1.504 # ton
           Coal: 0.639 # (MWh /ton HRC)
@@ -45,9 +49,11 @@ sectors:
       BF-BlendNG-BOF:
       # Source from https://doi.org/10.1007/s11663-019-01538-8 
       # TO DO: find a more specific one
-        CAPEX: 1000
-        legacy_capacity: 10000
-        lifetime: 30
+        CAPEX: 100
+        legacy_capacity: 0
+        lifetime: 40
+        legcap_out: 40 # years
+        leadtime: 0
         OPEX:
           Iron: 1.504 # ton
           Coal: 0.631 # (MWh /ton HRC)
@@ -59,9 +65,11 @@ sectors:
       # Direct hydrogen reduction
       # Numbers from HYBRID Project
       # Details:  https://www.hybritdevelopment.com/ 
-        CAPEX: 1000
+        CAPEX: 600
         legacy_capacity: 0
-        lifetime: 30
+        lifetime: 40
+        legcap_out: 40 # years
+        leadtime: 0
         OPEX:
           Iron: 1.504 # ton
           Coal: 0.042 # (MWh/ton crude steel)
