--- a/data/scenarios.yaml
+++ b/data/scenarios.yaml
@@ -7,7 +7,7 @@
   commodityPrices:
     Gas: 20 # Gas price (€/Mwh)
     Coal: 15 # (€/Mwh)
-    Electricity: 40 # (€/Mwh)
+    Electricity: 60 # (€/Mwh)
     Hydrogen: 166 # (€/Mwh)
     Iron: 100 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
     Scrap: 250 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
@@ -15,56 +15,56 @@
 2: # BASELINE scenario 30EUR/MWh elec
   # General input parameters
   E_2019: 1562.33 # emissions in 2019, according to difference between communications to the commission
-  E_ref: 1925 # baseline emissions 
-  MAC: 0.0001
+  E_ref: 1560 # baseline emissions 
+  MAC: 0.135
   horizon_ets: 10
   # Commodity price assumptions
   commodityPrices:
     Gas: 20 # Gas price (€/Mwh)
     Coal: 15 # (€/Mwh)
-    Electricity: 20 # (€/Mwh)
+    Electricity: 60 # (€/Mwh)
     Hydrogen:  166 # (€/Mwh)
     Iron: 100 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
     Scrap: 250 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
 3: # BASELINE scenario 30EUR/MWh elec
   # General input parameters
   E_2019: 1562.33 # emissions in 2019, according to difference between communications to the commission
-  E_ref: 1950 # baseline emissions  
-  MAC: 0.0001
+  E_ref: 1560 # baseline emissions  
+  MAC: 0.135
   horizon_ets: 10
   # Commodity price assumptions
   commodityPrices:
     Gas: 20 # Gas price (€/Mwh)
     Coal: 15 # (€/Mwh)
-    Electricity: 20 # (€/Mwh)
+    Electricity: 60 # (€/Mwh)
     Hydrogen: 166 # (€/Mwh)
     Iron: 100 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
     Scrap: 250 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
 4: # BASELINE scenario 30EUR/MWh elec
   # General input parameters
   E_2019: 1562.33 # emissions in 2019, according to difference between communications to the commission
-  E_ref: 2000 # baseline emissions  
-  MAC: 0.0001
+  E_ref: 1560
+  MAC: 0.135
   horizon_ets: 10
   # Commodity price assumptions
   commodityPrices:
     Gas: 20 # Gas price (€/Mwh)
     Coal: 15 # (€/Mwh)
-    Electricity: 20 # (€/Mwh)
+    Electricity: 60 # (€/Mwh)
     Hydrogen: 166 # (€/Mwh)
     Iron: 100 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
     Scrap: 250 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
 5: # BASELINE scenario 30EUR/MWh elec
   # General input parameters
   E_2019: 1562.33 # emissions in 2019, according to difference between communications to the commission
-  E_ref: 2050 # baseline emissions  
-  MAC: 0.0001
+  E_ref: 1560 # baseline emissions  
+  MAC: 0.135
   horizon_ets: 10
   # Commodity price assumptions
   commodityPrices:
     Gas: 20 # Gas price (€/Mwh)
     Coal: 15 # (€/Mwh)
-    Electricity: 20 # (€/Mwh)
+    Electricity: 60 # (€/Mwh)
     Hydrogen: 166 # (€/Mwh)
     Iron: 100 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
     Scrap: 250 # (€/ton, https://doi.org/10.1016/j.jclepro.2018.08.279)
